--- a/form/regitration.html
+++ b/form/regitration.html
@@ -48,6 +48,7 @@
         <option value="commerce">Commerce</option>
         <option value="arts">Arts</option>
         <option value="engineering">Engineering</option>
+        <option value="computer">Computer</option>
       </select>
     </p>
 
@@ -63,3 +64,4 @@
 
 </body>
 </html>
+
